--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 	<packaging>bundle</packaging>
 
 	<properties>
+		<javaVersion>1.8</javaVersion>
+		<compiler.bootclasspath>${bootclasspath.jdk8}</compiler.bootclasspath>
+		<javac.bootclasspath>${bootclasspath.jdk8}</javac.bootclasspath>
+		<javac.link.javaApi>${javac.link.javaApi.jdk8}</javac.link.javaApi>
 		<shortTitle>Theme Documentation</shortTitle>
 		<description.html><![CDATA[<a target="_top" href="https://semanticcms.com/">SemanticCMS</a> theme tailored for technical documentation.]]></description.html>
 		<javadoc.modules><![CDATA[<div style="float:left; margin: 0 1em">
